--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
             background-position: center;
         }
         .home{
-            background-image: url(img/home.jpg);
+            background-image: url(/img/home.jpg);
         }
         .watch{
-            background-image: url(img/watch.jpg);
+            background-image: url(/img/watch.jpg);
         }
         .shop{
-            background-image: url(img/shop.jpg);
+            background-image: url(/img/shop.jpg);
         }
         .group{
-            background-image: url(img/group.jpg);
+            background-image: url(/img/group.jpg);
         }
         .game{
-            background-image: url(img/game.jpg);
+            background-image: url(/img/game.jpg);
         }
         .icons{
             width: 295px;
